--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ bower_components
 build/Release
 
 # Dependency directories
+backend/node_modules
+frontend/node_modules
 node_modules/
 jspm_packages/
 
@@ -69,6 +71,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
+backend/src/config/env/development.env
+backend/src/config/env/production.env
 .env
 .env.test
 
